--- a/ui/src/assets/base.css
+++ b/ui/src/assets/base.css
@@ -1,6 +1,24 @@
-#app {
-    max-width: 1280px;
-    margin: 0 auto;
-    padding: 2rem;
-    font-weight: normal;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+body {
+    font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Hiragino Sans GB,Microsoft YaHei UI,Microsoft YaHei,Source Han Sans CN,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol, sans-serif !important;
+}
+header {
+    height: 56px;
+    box-shadow: 0 1px 4px #0000000f;
+    background-color: rgba(255,255,255,.75);
+    backdrop-filter: blur(20px);
+}
+.brand {
+    text-indent: -999rem;
+    background-image: url(@/assets/logo-dark.svg);
+    background-repeat: no-repeat;
+    background-size: 100%;
+    background-position: left center;
+    height: 25px;
+    width: 122px;
+    margin: 0;
+    padding: 0;
 }
